# saucepan

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
features/: bucket.feature  config.feature  install.feature  search.feature  update.feature
src/: bucket.rs  config.rs  error.rs  index.rs  main.rs  sauce.rs
src/commands/: bucket.rs  cat.rs  install.rs  list.rs  mod.rs  path.rs  search.rs  update.rs
src/sources/: git.rs
src/utils/: fs.rs  naming.rs
tests/: integration.rs
